Commencement de l'ajout des ID
