# src/main/java/com/mayoo/Controller/UserController.java
@@ -2,10 +2,7 @@ package com.mayoo.Controller;
 
 import com.mayoo.Exceptions.CustomException;
 import com.mayoo.Service.IUserService;
-import com.mayoo.openapi.model.AuthenticationRequest;
-import com.mayoo.openapi.model.AuthenticationResponse;
-import com.mayoo.openapi.model.ErrorMessage;
-import com.mayoo.openapi.model.RegisterRequest;
+import com.mayoo.openapi.model.SetPictograms;
 import lombok.RequiredArgsConstructor;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
@@ -15,12 +12,11 @@ import org.springframework.web.bind.annotation.RestController;
 @RequiredArgsConstructor
 public class UserController implements com.mayoo.openapi.api.AuthApi {
     private final IUserService userService;
-
     @Override
-    public ResponseEntity<AuthenticationResponse> authUserIdRightCreatePost(String idRight, RegisterRequest registerRequest) {
+    public ResponseEntity<com.mayoo.openapi.model.AuthenticationResponse> authUserIdRightCreatePost(String idRight, com.mayoo.openapi.model.RegisterRequest registerRequest) {
         ResponseEntity responseEntity;
         try {
-            AuthenticationResponse response = userService.createUser(registerRequest);
+            com.mayoo.openapi.model.AuthenticationResponse response = userService.createUser(registerRequest);
             responseEntity = ResponseEntity.ok(response);
         } catch (CustomException exception) {
             responseEntity = new ResponseEntity(HttpStatus.FORBIDDEN);
@@ -29,17 +25,22 @@ public class UserController implements com.mayoo.openapi.api.AuthApi {
     }
 
     @Override
-    public ResponseEntity<AuthenticationResponse> authUserPost(AuthenticationRequest authenticationRequest) {
+    public ResponseEntity<com.mayoo.openapi.model.AuthenticationResponse> authUserPost(com.mayoo.openapi.model.AuthenticationRequest authenticationRequest) {
         ResponseEntity responseEntity;
         try {
-            AuthenticationResponse response = userService.logInUser(authenticationRequest);
+            com.mayoo.openapi.model.AuthenticationResponse response = userService.logInUser(authenticationRequest);
             responseEntity = ResponseEntity.ok(response);
         } catch (CustomException exception) {
-            com.mayoo.openapi.model.ErrorMessage errorMessage = new ErrorMessage();
+            com.mayoo.openapi.model.ErrorMessage errorMessage = new com.mayoo.openapi.model.ErrorMessage();
             errorMessage.message(exception.getMessage());
             errorMessage.code(401);
             responseEntity = new ResponseEntity(errorMessage, HttpStatus.UNAUTHORIZED); 
         }
         return responseEntity;
+    }
+
+    @Override
+    public ResponseEntity<Void> authUserAllergenesPost(SetPictograms setPictograms, String authorization) {
+        return  new ResponseEntity(authorization, HttpStatus.OK);
     }
 }
